# string-compat

./: .gitignore  README.md  string-compat.cabal
src/: ListBased.hs  Types.hs
src/Data/: ByteString.hs  Text.hs
src/Data/ByteString/: Char8.hs  Lazy.hs
src/Data/ByteString/Lazy/: Char8.hs
src/Data/Text/: Encoding.hs  Lazy.hs
